tests/testfiles/passing/invalid_identifiers/keyword_as_id_char.c
/* Keyword as identifier: char */
int main() {
    int char;
}